# compare_package

./: AUTHORS  ChangeLog  Makefile.am  README.md  autogen.sh  compare_package.c  configure.ac  global.h
