# Makefile.am - use automake to generate Makefile.in

AM_CXFLAGS = $(INIT_CFLAGS)

bin_PROGRAMS = compare_package
compare_package_SOURCES = compare_package.c

all:

clean-local:
	$(RM) Makefile
	$(RM) Makefile.in
	$(RM) aclocal.m4
	$(RM) ar-lib
	$(RM) compile
	$(RM) config.*
	$(RM) configure
	$(RM) depcomp
	$(RM) install-sh
	$(RM) libtool


